@@ -1,8 +1,8 @@
 Package: WRS2
 Type: Package
 Title: A Collection of Robust Statistical Methods
-Version: 0.9-6
-Date: 2018-05-09
+Version: 0.9-7
+Date: 2018-06-06
 Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role=c("cre","aut")),
              person(given="Rand", family="Wilcox", email="rwilcox@usc.edu", role=c("aut")))
 Description: A collection of robust statistical methods based on Wilcox' WRS functions. It implements robust t-tests (independent and dependent samples), robust ANOVA (including between-within subject designs), quantile ANOVA, robust correlation, robust mediation, and nonparametric ANCOVA models based on robust location measures.
