@@ -57,8 +57,13 @@ export(Qanova)
 export(ZYmediate)
 export(akp.effect)
 export(yuen.effect.ci)
+export(onesampb)
+export(winvar)
+export(onestep)
+export(mom)
 
-
+S3method(print, bwtrim)
+S3method(print, onesampb)
 S3method(print, med1way)
 S3method(print, pb2)
 S3method(print, mcp2)
